# sharc

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  REFERENCE.md  TUTORIAL.md  ]  build.rs  design_doc.md  docs.tar  filename.ox  grep  head  main.shd  new_design_doc.md  notes.md  rustfmt.toml  shard_temp.asm  syntax.bnf  syntax.md  test.md  test.shd  testfile  todos.sh
.github/worflows/: checks.yaml
.github/workflows/: checks.yaml
compat/qbe-sys/: Cargo.toml
doc/: sketch  syntax.html  syntax.md
docs/: design_doc.md  synatx.md
examples/: bubble_sort.shd  hello_world.shd  web_server.shd
examples/hello_world/: main.shd
progressh/: Cargo.toml
progressh/src/: lib.rs
rants/: Rant1.md  Rant2.md
rem_test/: file_1  file_2  file_3  file_4
src/: args.rs  args_parser.rs  asm.rs  asm_compile.rs  ast.rs  cli.rs  compiler.rs  defs.rs  error.rs  indexer.rs  lexer.rs  linked_list.rs  location.rs  logger.rs  logging.rs  macros.rs  main.rs  parser.rs  parser_old.rs  position.rs  pre_compiler.rs  preprocessor.rs  project_config.rs  qbe.rs  report.rs  scanner.rs  span.rs  token.rs  utils.rs  verbs.rs  wrapup.rs
src/lexer/: mod.rs  tokenizer.rs
src/literals/: literals.rs  mod.rs
src/logging/: position.rs  printer.rs  reporter.rs
src/old/: tags.rs  (+6 more)
syntax/: arrays.md  comments.md  conditionals.md  directives.md  functions.md  general.md  heap.md  interrupts.md  labels.md  mutations.md  prefix_index.md  registers.md  stack.md  statics.md  syntax.bnf  syscalls_interrputs.md
tests/: boop  file_4  hello.ox  hello.shd  hello2.ox  hhh.ox  testfile
(+8 files in other folders)
