[package]
name = "shard"
version = "0.1.0"
edition = "2021"
description = "A compiler for the Shard programming language."
license = "MIT"
repository = "https://github.com/anthonysSlab/shard"


[dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.3"
libc = "0.2.149"
log = "0.4.20"
qbe = "2.1.0"
# strp = "1.1.2"

qbe-sys = { path = "./compat/qbe-sys" }

[build-dependencies]
cc = "1.0.83"
