[package]
name = "sharc"
version = "0.1.0"
edition = "2021"
description = "The compiler for the Shard Programming Language."
license = "MIT"
repository = "https://github.com/shard-org/sharc"
keywords = ["shard", "compiler", "language", "assembly"]
categories = ["compiler", "development-tools"]


[dependencies]
colored = "2.1"
iterlist = "0.1"
